--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
     image: mysql:8.0
     platform: linux/x86_64
     build: ./infra/mysql
+    ports:
+      - 3306:3306
     volumes:
       - db-store:/var/lib/mysql
 
