--- a/infra/php/Dockerfile
+++ b/infra/php/Dockerfile
@@ -13,5 +13,8 @@ RUN apt-get update && \
     docker-php-ext-install intl pdo_mysql zip bcmath
 
 COPY ./php.ini /usr/local/etc/php/php.ini
-
+RUN curl -SL https://deb.nodesource.com/setup_14.x | bash
+RUN apt-get install -y nodejs && \
+    npm install -g npm@latest && \
+    npm install -g @vue/cli
 WORKDIR /data
